--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Panda Ecommerce</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -91,6 +91,73 @@
         </div>
         <!-- Slider Ends -->
     </header>
+    <main>
+        <!-- Categories Starts -->
+        <section class="container categories">
+            <div class="row">
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="d-flex align-items-center justify-content-between bg-warning px-4 py-3 rounded-3">
+                        <h1 class="text-white">Watch</h1>
+                        <img src="images/categories/watch.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="d-flex align-items-center justify-content-between bg-success px-4 py-3 rounded-3">
+                        <h1 class="text-white">Bag</h1>
+                        <img src="images/categories/bag.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="d-flex align-items-center justify-content-between bg-primary px-4 py-3 rounded-3">
+                        <h1 class="text-white">Shoes</h1>
+                        <img src="images/categories/shoes.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Categories Ends -->
+
+        <!-- Shoes Starts -->
+        <section class="container">
+            <h3>Shoes</h3>
+            <div class="row row-cols-lg-3 row-cols-1">
+                <div class="col">
+                    <div class="card">
+                        <img src="images/shoes/shoe-1.png" alt="">
+                        <div class="card-body">
+                            <h4 class="card-title">Supply 350</h4>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+                            <h4>$120</h4>
+                            <button class="btn buy-now-button bg-gradient px-4 py-2">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="images/shoes/shoe-2.png" alt="">
+                        <div class="card-body">
+                            <h4 class="card-title">Nike 360</h4>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                            <h4>$320</h4>
+                            <button class="btn buy-now-button bg-gradient px-4 py-2">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="images/shoes/shoe-3.png" alt="">
+                        <div class="card-body">
+                            <h4 class="card-title">Red Airmax</h4>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional.</p>
+                            <h4>$350</h4>
+                            <button class="btn buy-now-button bg-gradient px-4 py-2">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Shoes Ends -->
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
 </html>
