backpack and subscribe section done, button improved

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             <h2>Cool Dude Headphone</h2>
                             <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
                             <h1 class="price">$420</h1>
-                            <button class="btn buy-now-button bg-gradient px-4 py-2">Buy Now</button>
+                            <button class="btn buy-now-button  px-4 py-2">Buy Now</button>
                         </div>
                         <div class="col-lg-5">
                             <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
@@ -58,7 +58,7 @@
                             <h2>Cool Dude Headphone</h2>
                             <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
                             <h1 class="price">$420</h1>
-                            <button class="btn buy-now-button bg-gradient px-4 py-2">Buy Now</button>
+                            <button class="btn buy-now-button  px-4 py-2">Buy Now</button>
                         </div>
                         <div class="col-lg-5">
                             <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
@@ -71,7 +71,7 @@
                             <h2>X-Box for your living room</h2>
                             <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
                             <h1 class="price">$420</h1>
-                            <button class="btn buy-now-button bg-gradient px-4 py-2">Buy Now</button>
+                            <button class="btn buy-now-button  px-4 py-2">Buy Now</button>
                         </div>
                         <div class="col-lg-5">
                             <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
@@ -123,41 +123,105 @@
             <div class="row row-cols-lg-3 row-cols-1">
                 <div class="col">
                     <div class="card">
-                        <img src="images/shoes/shoe-1.png" alt="">
+                        <img class="card-img-top" src="images/shoes/shoe-1.png" alt="">
                         <div class="card-body">
                             <h4 class="card-title">Supply 350</h4>
                             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
                             <h4>$120</h4>
-                            <button class="btn buy-now-button bg-gradient px-4 py-2">Buy Now</button>
+                            <button class="btn buy-now-button  px-4 py-2">Buy Now</button>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card">
-                        <img src="images/shoes/shoe-2.png" alt="">
+                        <img class="card-img-top" src="images/shoes/shoe-2.png" alt="">
                         <div class="card-body">
                             <h4 class="card-title">Nike 360</h4>
                             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                             <h4>$320</h4>
-                            <button class="btn buy-now-button bg-gradient px-4 py-2">Buy Now</button>
+                            <button class="btn buy-now-button  px-4 py-2">Buy Now</button>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card">
-                        <img src="images/shoes/shoe-3.png" alt="">
+                        <img class="card-img-top" src="images/shoes/shoe-3.png" alt="">
                         <div class="card-body">
                             <h4 class="card-title">Red Airmax</h4>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional.</p>
                             <h4>$350</h4>
-                            <button class="btn buy-now-button bg-gradient px-4 py-2">Buy Now</button>
+                            <button class="btn buy-now-button  px-4 py-2">Buy Now</button>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Shoes Ends -->
+
+        <!-- Backpack Starts -->
+        <section class="container">
+          <h3>Backpack</h3>
+          <div class="row row-cols-lg-3 row-cols-1">
+            <div class="col">
+              <div class="card h-100">
+                <img src="images/bags/bag-1.png" alt="" class="card-img-top">
+                <div class="card-body">
+                  <h4 class="card-title">Red Laltu Bag</h4>
+                  <h4>$120</h4>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+                <div class="card-footer">
+                  <button class="btn buy-now-button px-4 py-2">Buy Now</button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="images/bags/bag-2.png" alt="" class="card-img-top">
+                <div class="card-body">
+                  <h4 class="card-title">Blue Niltu Bag</h4>
+                  <h4>$120</h4>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                </div>
+                <div class="card-footer">
+                  <button class="btn buy-now-button px-4 py-2">Buy Now</button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="images/bags/bag-1.png" alt="" class="card-img-top">
+                <div class="card-body">
+                  <h4 class="card-title">Black Kaltu Bag</h4>
+                  <h4>$120</h4>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                </div>
+                <div class="card-footer">
+                  <button class="btn buy-now-button px-4 py-2">Buy Now</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- Backpack Ends -->
+
+        <!-- Subscribe Starts -->
+        <section class="container">
+          <div class="d-flex align-items-center justify-content-center pink-bg rounded-3" id="subscribe">
+            <div>
+              <h3>Let's Stay In Touch</h3>
+              <h5>Get updates on sales, specials and more</h5>
+              <input type="email" name="" id="" class="form-control my-3" placeholder="Your Email">
+              <input class="btn buy-now-button px-4 py2" type="submit" value="Submit">
+            </div>
+          </div>
+        </section>
+        <!-- Subscribe Ends -->
     </main>
+
+    <footer>
+      <p class="text-center"><small>©2022. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
 </html>
