placeholder color changed in input element

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <section class="container">
           <div class="d-flex align-items-center justify-content-center pink-bg rounded-3" id="subscribe">
             <div>
-              <h3>Let's Stay In Touch</h3>
+              <h3 class="text-uppercase">Let's Stay In Touch</h3>
               <h5>Get updates on sales, specials and more</h5>
               <input type="email" name="" id="" class="form-control my-3" placeholder="Your Email">
               <input class="btn buy-now-button px-4 py2" type="submit" value="Submit">
